fixed layout issues on right side of image

--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
     border: solid;
     border-width: 5px;
     border-radius: 5px;
+    height: auto;
 }
 #one {
     display: flex; 
+    justify-content: center;
     border: solid;
     border-width: 7px;
+    height: 150px;
     
 }
 
@@ -42,16 +45,17 @@
     border-width: 2px;
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 25%;
+    align-content: flex-start;
     border-top-width: 0;
     border-bottom-width: 0;
 }
 
 #six {
     display: flex; 
-    flex-direction: flex-start;
+    justify-content: center;
     border: solid;
     border-width: 7px;
+    height: 150px;
 }
 
 ul {
@@ -59,7 +63,7 @@ ul {
 }
 
 .bigger {
-    font-size: 50px;
+    font-size: 100px;
     font-style: bold;
 }
 
